Fixed the requested changes.

--- a/style.css
+++ b/style.css
@@ -1,11 +1,5 @@
-html {
+* {
   box-sizing: border-box;
-}
-
-*,
-*::before,
-*::after {
-  box-sizing: inherit;
 }
 
 .body {
@@ -28,7 +22,8 @@ html {
   border-radius: 5px;
 }
 
-.card-list__item-image-wrapper {
+.card-list__item-image-link {
+  display: block;
   height: 134px;
   margin-bottom: 45px;
 }
@@ -42,13 +37,13 @@ html {
 
 .card-list__item-title {
   margin: 0 0 5px;
+  font-size: 12px;
 }
 
 .card-list__item-link {
   color: #000;
   text-decoration: none;
   font-weight: 500;
-  font-size: 12px;
   line-height: 15px;
 }
 
